fixed the vertical margin overflow error

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-/*html, body {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    !*margin: 0;*!*/
-/*    !*padding: 0;*!*/
-/*}*/
+html, body {
+    width: 100%;
+    height: 100%;
+    /*margin: 0;*/
+    /*padding: 0;*/
+}
 
 .ipb-logo{
     background-image: url('../img/Picture3.png');
@@ -157,12 +157,14 @@ a.article:hover {
     background-color: white;
     position: absolute;
     width: 100%;
-    height: 100%;
+}
+#nav-content{
+    z-index: 10;
 }
 #map{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 90%;
     z-index: -1;
 }
 #map2{
